# aider-llm-benchmark

./: .dockerignore  .gitignore  .graphifyignore  Dockerfile  README.md  docker.sh  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
.husky/: pre-commit
scripts/: gitleaks.sh
src/aider_polyglot_benchmark/: __init__.py  benchmark.py  cleanup_tracks_cli.py  clone_tracks_cli.py  leaderboard_report.py  tracks.py
templates/: leaderboard.html.j2
tests/: conftest.py
tests/integration/: conftest.py  test_benchmark_cli.py  test_clone_exercism_tracks.py
tests/unit/: test_benchmark.py  test_leaderboard_report.py  test_tracks.py
